[package]
name = "poco-media"
version = "0.1.0"
authors = ["wudi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.2"
hyper = "0.14.24"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
regex = "1.7.1"
async-trait = "0.1.66"
bytes = "1.4.0"
hyper-tls = "0.5.0"